--- a/index.html
+++ b/index.html
@@ -6,17 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <!-- for the add and rem-btn icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-        integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>JIRA TICKET CLONE</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@323;400&display=swap" rel="stylesheet">
+    <title>Jira Ticket</title>
 </head>
 
 <body>
-    <!--ToolBox-->
+    <!-- Toolbox -->
     <div class="toolbox-cont">
-        <div class="toolbox-priotity-cont">
+        <div class="toolbox-priority-cont">
             <div class="lightpink color"></div>
             <div class="lightblue color"></div>
             <div class="lightgreen color"></div>
@@ -31,19 +34,22 @@
             </div>
         </div>
     </div>
-    <!--Main Container-->
-    <div class="main-cont"></div>
+    <!-- Main container -->
+    <div class="main-cont">
+    </div>
 
-    
-        <div class="modal-cont">
-            <textarea spellcheck="false" class="textarea-cont"></textarea>
-            <div class="priority-colors-cont">
-                <div class="lightpink priority-color"></div>
-                <div class="lightblue priority-color"></div>
-                <div class="lightgreen priority-color"></div>
-                <div class="black priority-color border"></div>
-            </div>
+
+    <div class="modal-cont">
+        <textarea spellcheck="false" class="textarea-cont" placeholder="Enter your ticket task.."></textarea>
+        <div class="priority-colors-cont">
+            <div class="lightpink priority-color"></div>
+            <div class="lightblue priority-color"></div>
+            <div class="lightgreen priority-color"></div>
+            <div class="black priority-color border"></div>
         </div>
-    <script src="script.js"></script>
+    </div>
+    <script defer src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
+    <script src="./script.js"></script>
 </body>
+
 </html>
